--- a/index.html
+++ b/index.html
@@ -1,178 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>SSC CGL Mock Test</title>
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background: #f4f6f8;
-  margin: 0;
-  padding: 20px;
-}
-.container {
-  max-width: 800px;
-  background: #fff;
-  padding: 20px;
-  margin: auto;
-  border-radius: 8px;
-}
-.timer {
-  font-size: 18px;
-  font-weight: bold;
-  color: red;
-  text-align: right;
-}
-.question {
-  margin-top: 20px;
-}
-.options label {
-  display: block;
-  margin: 6px 0;
-}
-button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.analysis {
-  margin-top: 30px;
-  background: #eef2f3;
-  padding: 15px;
-  border-radius: 6px;
-}
-.correct { color: green; }
-.wrong { color: red; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SSC CGL 2025 Mock Test</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div class="container">
-  <h2>SSC CGL Mock Test – 1</h2>
-  <div class="timer" id="timer">60:00</div>
-
-  <form id="mockForm">
-
-    <!-- QUESTION 1 -->
-    <div class="question">
-      <p>1) If A:B = 3:5 and B:C = 10:9, find A:C.</p>
-      <div class="options">
-        <label><input type="radio" name="q1" value="a"> 2:3</label>
-        <label><input type="radio" name="q1" value="b"> 3:5</label>
-        <label><input type="radio" name="q1" value="c"> 2:5</label>
-        <label><input type="radio" name="q1" value="d"> 1:3</label>
-      </div>
+    <div id="start-screen" class="modal-container">
+        <div class="card">
+            <img src="https://upload.wikimedia.org/wikipedia/en/0/0b/Staff_Selection_Commission_Logo.png" alt="SSC Logo" width="100">
+            <h1>SSC CGL 2025 - Practice Mock</h1>
+            <p>Enter your details to begin the simulation</p>
+            <input type="text" id="user-name" placeholder="Candidate Name" required>
+            <button id="start-btn">START EXAM</button>
+        </div>
     </div>
 
-    <!-- QUESTION 2 -->
-    <div class="question">
-      <p>2) Simple Interest on ₹5000 at 10% for 2 years is?</p>
-      <div class="options">
-        <label><input type="radio" name="q2" value="a"> ₹900</label>
-        <label><input type="radio" name="q2" value="b"> ₹1000</label>
-        <label><input type="radio" name="q2" value="c"> ₹1100</label>
-        <label><input type="radio" name="q2" value="d"> ₹1200</label>
-      </div>
+    <div id="exam-interface" class="hidden">
+        <nav class="top-nav">
+            <div class="nav-left">SSC CGL 2025 - Tier I</div>
+            <div class="nav-right">Time Left: <span id="timer">60:00</span></div>
+        </nav>
+
+        <div class="main-body">
+            <div class="question-column">
+                <div class="q-header">
+                    <span>Question No: <b id="q-number">1</b></span>
+                    <span id="candidate-display" style="font-size: 0.8rem; color: #555;"></span>
+                </div>
+                <div class="q-content">
+                    <p id="question-text" class="q-prose">Loading question...</p>
+                    <div id="options-list" class="options-grid">
+                        </div>
+                </div>
+                <div class="q-footer">
+                    <button id="prev-btn">Previous</button>
+                    <button id="next-btn" class="blue-btn">Save & Next</button>
+                    <button id="submit-btn" class="red-btn">Submit Exam</button>
+                </div>
+            </div>
+
+            <div class="palette-column">
+                <h3>Question Palette</h3>
+                <div id="palette-grid"></div>
+                <hr>
+                <div class="legend">
+                    <div class="legend-item"><span class="box answered"></span> Answered</div>
+                    <div class="legend-item"><span class="box skipped"></span> Not Answered</div>
+                    <div class="legend-item"><span class="box current"></span> Current</div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- QUESTION 3 -->
-    <div class="question">
-      <p>3) Find the average of first 10 natural numbers.</p>
-      <div class="options">
-        <label><input type="radio" name="q3" value="a"> 4.5</label>
-        <label><input type="radio" name="q3" value="b"> 5</label>
-        <label><input type="radio" name="q3" value="c"> 5.5</label>
-        <label><input type="radio" name="q3" value="d"> 6</label>
-      </div>
+    <div id="result-screen" class="hidden container">
+        <div class="analysis-card">
+            <h2>Performance Report</h2>
+            <p>Candidate: <b id="res-name"></b></p>
+            <div class="stats-grid">
+                <div class="stat-box">Total: <span id="res-total">0</span></div>
+                <div class="stat-box green">Correct: <span id="res-correct">0</span></div>
+                <div class="stat-box red">Incorrect: <span id="res-wrong">0</span></div>
+            </div>
+            <h1 class="final-score">Final Score: <span id="res-score">0</span></h1>
+            <button onclick="location.reload()" class="blue-btn">Take Another Test</button>
+        </div>
     </div>
 
-    <!-- QUESTION 4 -->
-    <div class="question">
-      <p>4) If CP = ₹200 and SP = ₹240, find profit %.</p>
-      <div class="options">
-        <label><input type="radio" name="q4" value="a"> 15%</label>
-        <label><input type="radio" name="q4" value="b"> 18%</label>
-        <label><input type="radio" name="q4" value="c"> 20%</label>
-        <label><input type="radio" name="q4" value="d"> 25%</label>
-      </div>
-    </div>
-
-    <!-- QUESTION 5 -->
-    <div class="question">
-      <p>5) 12 is what percent of 48?</p>
-      <div class="options">
-        <label><input type="radio" name="q5" value="a"> 20%</label>
-        <label><input type="radio" name="q5" value="b"> 25%</label>
-        <label><input type="radio" name="q5" value="c"> 30%</label>
-        <label><input type="radio" name="q5" value="d"> 40%</label>
-      </div>
-    </div>
-
-    <button type="button" onclick="submitTest()">Submit Test</button>
-  </form>
-
-  <div id="analysis" class="analysis" style="display:none;"></div>
-</div>
-
-<script>
-let time = 60 * 60;
-const timerEl = document.getElementById("timer");
-
-const interval = setInterval(() => {
-  let min = Math.floor(time / 60);
-  let sec = time % 60;
-  timerEl.textContent = `${min}:${sec < 10 ? "0" : ""}${sec}`;
-  time--;
-  if (time < 0) {
-    clearInterval(interval);
-    submitTest();
-  }
-}, 1000);
-
-function submitTest() {
-  clearInterval(interval);
-
-  const answers = {
-    q1: "a",
-    q2: "b",
-    q3: "c",
-    q4: "c",
-    q5: "b"
-  };
-
-  const explanations = {
-    q1: "A:B = 3:5, B:C = 10:9 → A:C = 6:9 = 2:3",
-    q2: "SI = P×R×T/100 = 5000×10×2/100 = ₹1000",
-    q3: "Average = (n+1)/2 = 11/2 = 5.5",
-    q4: "Profit = 40 → Profit% = 40/200 ×100 = 20%",
-    q5: "12/48 ×100 = 25%"
-  };
-
-  let score = 0;
-  let output = "<h3>Test Analysis</h3>";
-
-  for (let q in answers) {
-    let userAns = document.querySelector(`input[name="${q}"]:checked`);
-    if (userAns && userAns.value === answers[q]) {
-      score++;
-      output += `<p class="correct">${q.toUpperCase()} ✔ Correct</p>`;
-    } else {
-      output += `<p class="wrong">${q.toUpperCase()} ✘ Wrong</p>`;
-    }
-    output += `<p><b>Explanation:</b> ${explanations[q]}</p>`;
-  }
-
-  output += `<h4>Total Score: ${score} / 5</h4>`;
-
-  document.getElementById("analysis").innerHTML = output;
-  document.getElementById("analysis").style.display = "block";
-}
-</script>
-
+    <script src="script.js"></script>
 </body>
 </html>
+
