--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                 </div>
                 <div class="q-content">
                     <p id="question-text" class="q-prose">Loading question...</p>
-                    <div id="options-list" class="options-grid">
-                        </div>
+                    <div id="options-list" class="options-grid"></div>
                 </div>
                 <div class="q-footer">
                     <button id="prev-btn">Previous</button>
@@ -60,16 +59,15 @@
             <h2>Performance Report</h2>
             <p>Candidate: <b id="res-name"></b></p>
             <div class="stats-grid">
-                <div class="stat-box">Total: <span id="res-total">0</span></div>
-                <div class="stat-box green">Correct: <span id="res-correct">0</span></div>
-                <div class="stat-box red">Incorrect: <span id="res-wrong">0</span></div>
+                <div class="stat-box">Total Questions<span id="res-total">0</span></div>
+                <div class="stat-box green">Correct<span id="res-correct">0</span></div>
+                <div class="stat-box red">Incorrect<span id="res-wrong">0</span></div>
             </div>
             <h1 class="final-score">Final Score: <span id="res-score">0</span></h1>
             <button onclick="location.reload()" class="blue-btn">Take Another Test</button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
-
